--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,24 @@ font-family: 'Oswald', sans-serif; */
     box-sizing: border-box;
 }
 
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
-}
+*, *:before, *:after{ box-sizing: border-box; }
 
 body {
     margin: 0;
     padding: 0;
     font-family: 'Oswald', sans-serif;
     font-weight: 400;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    padding: 0;
+    margin: 0;
 }
 
 .container {
@@ -139,4 +146,81 @@ body {
     text-transform: uppercase;
     color: var(--white-color);
     margin: 0 auto;
+}
+
+.about {
+    min-height: 1080px;
+    position: relative;
+}
+
+.info {
+    position: absolute;
+    top: -150px;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 1110px;
+    min-height: 300px;
+    width: 100%;
+    background-color: #F7F7F7;
+    padding: 57px 130px;
+
+}
+
+.about__grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+    justify-items: center
+}
+
+.about__grid-item {
+    text-align: center;
+    width: 190px;
+}
+
+.about__h4 {
+    font-family: 'Oswald';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 72px;
+    line-height: 107px;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--accent-color);
+    margin-bottom: 5px;
+}
+
+.about__h5 {
+    font-family: 'Oswald';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 53px;
+    text-align: center;
+    text-transform: uppercase;
+
+}
+
+.about__p {
+    font-family: 'Oswald';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 27px;
+    text-align: center;
+}
+@media screen and (max-width:1280px){
+    .about__grid {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+    }
+}
+@media screen and (max-width:768px){
+    .info{
+        position: relative;
+    }
+    .about__grid {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+    }
 }
