--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,10 @@ body {
     font-family: 'Oswald', sans-serif;
     font-weight: 400;
 }
-
+img{
+    display: block;
+    max-width: 100%;
+}
 h1,
 h2,
 h3,
@@ -151,6 +154,7 @@ p {
 .about {
     min-height: 1080px;
     position: relative;
+    padding-top: 250px;
 }
 
 .info {
@@ -223,4 +227,58 @@ p {
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(4, 1fr);
     }
+}
+
+.project-h2 {
+    text-align: center;
+    margin-bottom: 50px;
+}
+.about__grid-2 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    justify-items: center
+}
+.projecr-img{
+    margin-bottom: 45px;
+}
+.rectangle {
+    width: 55px;
+    height: 6px; 
+    background: var(--accent-color);
+    margin-bottom: 15px;  
+}
+
+.project-h3 {
+    font-family: 'Oswald';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 36px;
+    margin-bottom: 12px;
+    color: var(--dark-color);
+}
+.project-p {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: var(--grey-color);
+}
+@media screen and (max-width:1280px){
+    .about{
+        padding: 450px 15px 150px 15px;
+    }
+    .about__grid-2 {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+    }
+}
+@media screen and (max-width:768px){
+    .about__grid-2 {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+    }
+    
 }
