--- a/css/style.css
+++ b/css/style.css
@@ -441,3 +441,70 @@ p {
     }
 
 }
+.portfolio {
+}
+.portfolio__grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    gap: 0;
+}
+.portfolio_grid-item {
+}
+.potfolio-img {
+}
+
+.question {
+    padding-top: 150px;
+    padding-bottom: 150px;
+}
+.text-h2 {
+}
+.question .section__h2 {
+}
+.question_items {
+}
+.question_item {
+}
+.text-h3 {
+}
+.question_3 {
+    text-transform: uppercase;
+    color: var(--accent-color);
+    margin-bottom: 21px;
+}
+
+.question_p {
+    margin-bottom: 40px;
+    color: var(--grey-color);
+    max-width: 730px;
+}
+.question_3.close{
+    margin-bottom: 33px;
+}
+.question_3.open::before,
+.question_3.close::before{
+    content: "";
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    background-image:url(../img/Polygon.svg) ;
+    background-repeat: no-repeat;
+    background-position:center;
+    margin-right: 15px;
+
+}
+.question_3.open::before{
+    transform: rotate(-90deg)
+}
+
+.question_3.close + .question_p{
+    display: none;
+}
+
+@media screen and (max-width:1280px) {
+    .question{
+        padding: 150px 15px 110px;
+    }
+}
+
