--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ p {
     font-weight: 500;
     font-size: 24px;
     line-height: 36px;
+    text-transform: uppercase;
 }
 
 .text-h4 {
@@ -80,13 +81,13 @@ p {
     line-height: 22px;
 }
 
-.text-p-revews {
+/* .text-p-revews {
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 21px;
-}
+} */
 
 .header {
     min-height: 740px;
@@ -420,54 +421,57 @@ p {
 .services__icon {
     margin: 0 auto 25px;
 }
+
 @media screen and (max-width:1280px) {
-    .servieces{
+    .servieces {
         padding-left: 15px;
         padding-right: 15px;
     }
-    .services__grid{
+
+    .services__grid {
         grid-template-columns: repeat(2, 3fr);
         grid-template-rows: repeat(3, 2fr);
     }
-    .services__grid-item{
+
+    .services__grid-item {
         width: 100%;
     }
 }
 
 @media screen and (max-width:768px) {
-    .services__grid{
+    .services__grid {
         grid-template-columns: repeat(1, 1fr);
 
     }
 
 }
-.portfolio {
-}
+
+.portfolio {}
+
 .portfolio__grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     justify-items: center;
     gap: 0;
 }
-.portfolio_grid-item {
-}
-.potfolio-img {
-}
+
+.portfolio_grid-item {}
+
+.potfolio-img {}
 
 .question {
-    padding-top: 150px;
-    padding-bottom: 150px;
+    padding-top: 155px;
+    padding-bottom: 110px;
 }
-.text-h2 {
-}
-.question .section__h2 {
-}
-.question_items {
-}
-.question_item {
-}
-.text-h3 {
-}
+
+.question .section__h2 {}
+
+.question_items {}
+
+.question_item {}
+
+.text-h3 {}
+
 .question_3 {
     text-transform: uppercase;
     color: var(--accent-color);
@@ -479,32 +483,214 @@ p {
     color: var(--grey-color);
     max-width: 730px;
 }
-.question_3.close{
+
+.question_3.close {
     margin-bottom: 33px;
 }
+
 .question_3.open::before,
-.question_3.close::before{
+.question_3.close::before {
     content: "";
     display: inline-block;
     width: 15px;
     height: 15px;
-    background-image:url(../img/Polygon.svg) ;
+    background-image: url(../img/Polygon.svg);
     background-repeat: no-repeat;
-    background-position:center;
+    background-position: center;
     margin-right: 15px;
 
 }
-.question_3.open::before{
+
+.question_3.open::before {
     transform: rotate(-90deg)
 }
 
-.question_3.close + .question_p{
+.question_3.close+.question_p {
     display: none;
 }
 
 @media screen and (max-width:1280px) {
-    .question{
+    .question {
         padding: 150px 15px 110px;
     }
 }
 
+.partners {
+    background-color: var(--dark-color);
+    padding-top: 100px;
+    padding-bottom: 80px;
+}
+
+.partners__h2 {
+    text-align: center;
+    font-family: 'Oswald';
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 53px;
+    text-transform: uppercase;
+    color: var(--white-color);
+    margin-bottom: 50px;
+}
+
+.partners__flex {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.partners__item {
+    margin-right: 40px;
+    margin-bottom: 20px;
+    min-width: 170px;
+}
+
+.partners__item:nth-child(5n) {
+    margin-right: 0;
+}
+
+@media screen and (max-width:1280px) {
+    .partners__flex {
+        justify-content: center;
+    }
+}
+
+.reviews {
+    padding: 145px 0;
+}
+
+.reviews__h2 {
+    text-align: center;
+    margin-bottom: 60px;
+}
+
+.reviews__grid {
+    display: grid;
+    gap: 30px;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.reviews__grid-item {}
+
+.reviews__card {
+    background-color: #F7F7F7;
+    margin-bottom: 30px;
+    padding: 30px;
+}
+
+.reviews__quotes {
+    color: var(--accent-color);
+    font-size: 96px;
+    line-height: 1;
+    margin-bottom: -40px;
+}
+
+.text-p-reviews {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 21px;
+}
+
+.reviews__author-accent {
+    color: var(--accent-color);
+    margin: 5px;
+}
+
+@media screen and (max-width:1280px) {
+    .reviews {
+        padding: 100px 15px;
+    }
+
+    .reviews__grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width:768px) {
+    .reviews__grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+.contacts {
+    padding: 100px 0 150px;
+}
+
+.contacts__h2 {
+    text-align: center;
+    margin-bottom: 60px;
+}
+
+.contacts__grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+}
+
+.contacts__grid-item {
+    max-width: 255px;
+}
+
+.text-h3 {
+    text-align: center;
+}
+
+.contacts__h3 {}
+
+.contacts__h3-gray {
+    color: var(--grey-color);
+    margin-bottom: 18px;
+}
+
+.contacts__icon {
+    height: 50px;
+    width: 50px;
+    margin: 0 auto 15px;
+}
+
+.email-accept {
+    color: var(--accent-color);
+
+}
+
+.footer {
+    padding: 30px 0;
+    background-color: var(--dark-color);
+    color: white;
+}
+
+.footer__flex {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.footer__copyright {}
+
+.footer__brand {}
+
+@media screen and (max-width:1280px) {
+    .contacts__grid {
+        grid-template-columns: repeat(2, 1fr);
+
+    }
+
+    .contacts__grid-item {
+        max-width: 100%;
+    }
+    .footer{
+        padding: 0 15px;
+    }
+
+    @media screen and (max-width:768px) {
+        .contacts__grid {
+            grid-template-columns: repeat(1, 1fr);
+        }
+
+        .contacts__grid-item {
+            max-width: 100%;
+        }
+    }
+
+}
